--- a/Demographie_Covid_Patient_innen.ipynb
+++ b/Demographie_Covid_Patient_innen.ipynb
@@ -18,7 +18,7 @@
       "source": [
         "# **Ziel**: Explorative Datenanalyse (EDA) der Covid19-Patient:innen\n",
         "\n",
-        "Die explorative Datenanalyse der Covid19-Patient:innen erfolgte in der SQL-Quelldatenbank in vier Schritten\n",
+        "Die explorative Datenanalyse der Demographie der Covid19-Patient:innen erfolgte in der SQL-Quelldatenbank in vier Schritten\n",
         "\n",
         "1. Analyse des Datensets und Exploration\n",
         "2. Datenbereinigung\n",
@@ -92,14 +92,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 354,
+      "execution_count": 444,
       "metadata": {
         "id": "HzmmNYDbcnd7"
       },
       "outputs": [],
       "source": [
         "# Verbindung zur SQL-Quelldatenbank Datenbank \n",
-        "DB_PATH = \"/content/drive/Shareddrives/DMA_2023_D/Anastasia/source_covid19_test.db\"\n",
+        "DB_PATH = \"/content/drive/Shareddrives/DMA_2023_D/DMA2023TeamB/Quelldatenbank/source_covid19_ANTIVOVIS_db.db\"\n",
         "\n",
         "# connect to db\n",
         "dwh_conn = sqlite3.connect(DB_PATH)"
@@ -107,20 +107,20 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 355,
+      "execution_count": 445,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "l3c3cyQocaXV",
-        "outputId": "011354b9-7a58-40bb-8973-e838d3d8fefc"
+        "outputId": "d0242ce3-9a9e-4305-8aaa-6ac412b16dd0"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "List of Tables [('disease',), ('patients',), ('encounters',), ('careplans',), ('conditions',), ('medications',), ('procedures',), ('observations',), ('devices',), ('imaging_studies',), ('immunizations',)]\n"
+            "List of Tables [('conditions',), ('devices',), ('encounters',), ('immunizations',), ('medications',), ('patients',), ('procedures',)]\n"
           ]
         }
       ],
@@ -620,15 +620,6 @@
       ]
     },
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "OcAfS9u0nz1K"
-      },
-      "source": [
-        "The described method will help to see how data has been spread for numerical values. We can clearly see the minimum value, mean values, different percentile values, and maximum values."
-      ]
-    },
-    {
       "cell_type": "code",
       "execution_count": 362,
       "metadata": {
@@ -1048,7 +1039,7 @@
         "\n",
         "1. Löschung der fehlenden Werte bei geringer Anzahl. \n",
         "2. Für numerische Werte können diese durch Durchschnittswerte oder Median Werte ersetzt werden. Letzteres wird umgesetzt, wenn es große Ausreißer gibt. \n",
-        "3. Für kategorische Werte können fehlende Werte mit \"mode\" ersetzt werden, den häufigen Werten. We can see that we have various missing values in the respective columns. There are various ways of treating your missing values in the data set. And which technique to use when is actually dependent on the type of data you are dealing with."
+        "3. Für kategorische Werte können fehlende Werte mit \"mode\" ersetzt werden, den häufigen Werten. "
       ]
     },
     {
